// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SideNavItems rendering renders expected elements 1`] = `
<ul
  className="SideNav__items"
>
  child
</ul>
`;

exports[`SideNavItems rendering renders expected elements when className is set 1`] = `
<ul
  className="SideNav__items TestClass"
>
  child
</ul>
`;
